--- a/chat.html
+++ b/chat.html
@@ -10,16 +10,16 @@
 :root{
   --bg:#e0f7fa;
   --card:#ffffff;
-  --sent:#4f46e5;
-  --sent-dark:#4338ca;
-  --received:#f0f0f0;
+  --sent:#8b5cf6; /* bright purple */
+  --sent-dark:#7c3aed;
+  --received:#f3f4f6; /* light gray */
   --received-border:#d1d5db;
   --typing:#a5d6a7;
   --accent:#2563eb;
   --green:#16a34a;
   --danger:#ef4444;
   --muted:#6b7280;
-  --radius:20px;
+  --radius:24px;
 }
 *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,Arial,Helvetica,sans-serif}
 html,body{height:100%}
@@ -29,6 +29,7 @@ body{
   justify-content:center;
   background:var(--bg);
 }
+
 /* container */
 .container{
   width:420px;
@@ -40,6 +41,7 @@ body{
   flex-direction:column;
   overflow:hidden;
 }
+
 /* header */
 header{
   display:flex;
@@ -64,76 +66,83 @@ header{
 
 /* messages area */
 .messages {
-  flex: 1;
-  padding: 16px;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  background: linear-gradient(180deg, rgba(255,255,255,0.05), transparent);
+  flex:1;
+  padding:16px;
+  overflow-y:auto;
+  display:flex;
+  flex-direction:column;
+  gap:12px;
+  background:linear-gradient(180deg, rgba(255,255,255,0.05), transparent);
   scroll-behavior: smooth;
 }
 
 /* chat bubble */
 .bubble {
-  max-width: 75%;
-  padding: 12px 16px;
-  border-radius: 24px;
-  word-break: break-word;
-  position: relative;
-  font-size: 15px;
-  line-height: 1.4;
+  max-width:75%;
+  padding:12px 16px;
+  border-radius:var(--radius);
+  word-break:break-word;
+  position:relative;
+  font-size:15px;
+  line-height:1.4;
   transition: all 0.2s ease;
-  display: inline-block;
+  display:inline-block;
 }
 
-/* sent messages (right) */
-.bubble.me {
-  margin-left: auto;
-  background: linear-gradient(135deg, #a78bfa, #7c3aed); /* purple gradient */
-  color: #fff;
-  border-radius: 24px 24px 6px 24px; /* bottom-right smaller */
-  box-shadow: 0 4px 10px rgba(124, 58, 237, 0.3);
+/* sent message (right) */
+.bubble.me{
+  margin-left:auto;
+  background:linear-gradient(135deg, var(--sent), var(--sent-dark));
+  color:#fff;
+  border-bottom-right-radius:8px;
+  border-top-right-radius:24px;
+  border-top-left-radius:24px;
+  border-bottom-left-radius:24px;
+  box-shadow:0 4px 10px rgba(124,58,237,0.3);
   animation: popIn 0.2s ease;
 }
 
-/* received messages (left) */
-.bubble.other {
-  margin-right: auto;
-  background: #f3f4f6; /* light gray */
-  color: #111;
-  border-radius: 24px 24px 24px 6px; /* bottom-left smaller */
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+/* received message (left) */
+.bubble.other{
+  margin-right:auto;
+  background:var(--received);
+  color:#111;
+  border-bottom-left-radius:8px;
+  border-top-left-radius:24px;
+  border-top-right-radius:24px;
+  border-bottom-right-radius:24px;
+  border:1px solid var(--received-border);
+  box-shadow:0 2px 6px rgba(0,0,0,0.05);
   animation: popIn 0.2s ease;
 }
 
 /* timestamp inside bubble */
 .ts {
-  font-size: 10px;
-  color: #6b7280;
-  position: absolute;
-  bottom: 4px;
-  right: 8px;
-  opacity: 0.7;
+  font-size:10px;
+  color:#6b7280;
+  position:absolute;
+  bottom:4px;
+  right:8px;
+  opacity:0.7;
 }
 
 /* typing bubble */
 .bubble.typing {
-  background: #d1fae5;
-  color: #16a34a;
-  display: flex;
-  align-items: center;
-  gap: 4px;
-  border-radius: 24px;
-  width: 40px;
-  padding: 8px;
+  background:#d1fae5;
+  color:#16a34a;
+  display:flex;
+  align-items:center;
+  gap:4px;
+  border-radius:var(--radius);
+  width:40px;
+  padding:8px;
 }
 
 .bubble.typing span {
-  width: 6px;
-  height: 6px;
-  background: #16a34a;
-  border-radius: 50%;
+  width:6px;
+  height:6px;
+  background:#16a34a;
+  border-radius:50%;
   animation: blink 1.2s infinite;
 }
 
@@ -142,14 +151,13 @@ header{
 
 /* animations */
 @keyframes blink {
-  0%, 80%, 100% { opacity: 0; }
-  40% { opacity: 1; }
+  0%, 80%, 100% { opacity:0; }
+  40% { opacity:1; }
 }
 @keyframes popIn {
-  0% { transform: scale(0.9); opacity: 0; }
-  100% { transform: scale(1); opacity: 1; }
+  0% { transform: scale(0.9); opacity:0; }
+  100% { transform: scale(1); opacity:1; }
 }
-
 
 /* input area */
 .composer {
@@ -161,7 +169,7 @@ header{
   background:linear-gradient(180deg,#ffffff,#f0f0f0);
 }
 .composer input{
-  flex:1;padding:12px;border-radius:20px;border:1px solid rgba(0,0,0,0.1);outline:none;font-size:15px;background:white;
+  flex:1;padding:12px;border-radius:24px;border:1px solid rgba(0,0,0,0.1);outline:none;font-size:15px;background:white;
 }
 .send-btn{width:44px;height:44px;border-radius:12px;border:none;background:var(--accent);color:white;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 4px 12px rgba(0,0,0,0.2)}
 .send-btn:active{transform:scale(0.97)}
@@ -187,6 +195,7 @@ header{
 .btn-accept{background:var(--green);color:white;padding:10px 16px;border-radius:12px;border:none;cursor:pointer}
 .btn-decline{background:var(--danger);color:white;padding:10px 16px;border-radius:12px;border:none}
 .btn-cancel{background:#94a3b8;color:white;padding:10px 16px;border-radius:12px;border:none}
+
 </style>
 </head>
 <body>
