--- a/chat.html
+++ b/chat.html
@@ -87,30 +87,31 @@ header{
   font-size:15px;
   line-height:1.4;
   transition: all 0.2s ease;
-  display:inline-block;
+  display:flex;  /* changed from inline-block */
+  flex-direction: column;
 }
 
 /* sent message (right) */
 .bubble.me{
-  align-self:flex-end; /* fix alignment to right */
+  align-self:flex-end; /* aligns to right */
   background:linear-gradient(135deg, var(--sent), var(--sent-dark));
   color:#fff;
-  border-bottom-right-radius:8px;
-  border-top-right-radius:24px;
   border-top-left-radius:24px;
+  border-top-right-radius:24px;
   border-bottom-left-radius:24px;
+  border-bottom-right-radius:8px;
   box-shadow:0 4px 10px rgba(124,58,237,0.3);
   animation: popIn 0.2s ease;
 }
 
 /* received message (left) */
 .bubble.other{
-  align-self:flex-start; /* fix alignment to left */
+  align-self:flex-start; /* aligns to left */
   background:var(--received);
   color:#111;
-  border-bottom-left-radius:8px;
   border-top-left-radius:24px;
   border-top-right-radius:24px;
+  border-bottom-left-radius:8px;
   border-bottom-right-radius:24px;
   border:1px solid var(--received-border);
   box-shadow:0 2px 6px rgba(0,0,0,0.05);
