--- a/chat.html
+++ b/chat.html
@@ -8,37 +8,41 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 <style>
 :root{
-  --bg:#f5f7fb;
+  --bg:#f6fbff;
   --card:#ffffff;
-  --sent:#8b5cf6;
-  --sent-dark:#7c3aed;
-  --received:#f3f4f6;
-  --received-border:#e5e7eb;
+  --sent-start:#6d28d9;
+  --sent-end:#4f46e5;
+  --received:#f8fafc;
+  --received-border:#e6eefc;
   --accent:#2563eb;
-  --green:#16a34a;
-  --danger:#ef4444;
   --muted:#6b7280;
-  --radius:24px;
+  --radius:22px;
+  --shadow: 0 6px 18px rgba(16,24,40,0.08);
+  --small-shadow: 0 6px 14px rgba(79,70,229,0.12);
+  --glass: rgba(255,255,255,0.6);
 }
-*{box-sizing:border-box;margin:0;padding:0;font-family:Inter,Arial,Helvetica,sans-serif}
+*{box-sizing:border-box;margin:0;padding:0;font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;}
 html,body{height:100%}
 body{
   display:flex;
   align-items:center;
   justify-content:center;
-  background:var(--bg);
+  background: linear-gradient(180deg,#eaf6ff 0%, #f6fbff 60%);
+  padding:28px;
 }
 
 /* container */
 .container{
   width:420px;
   height:calc(100vh - 64px);
+  max-height:960px;
   background:var(--card);
   border-radius:18px;
-  box-shadow:0 20px 50px rgba(0,0,0,0.08);
+  box-shadow: var(--shadow);
   display:flex;
   flex-direction:column;
   overflow:hidden;
+  border:1px solid rgba(15,23,42,0.04);
 }
 
 /* header */
@@ -47,145 +51,151 @@ header{
   align-items:center;
   justify-content:space-between;
   gap:12px;
-  padding:14px;
-  border-bottom:1px solid rgba(0,0,0,0.05);
-  background:#fff;
+  padding:12px 16px;
+  backdrop-filter: blur(6px);
+  background:linear-gradient(90deg, rgba(37,99,235,0.04), rgba(37,99,235,0.01));
+  border-bottom: 1px solid rgba(15,23,42,0.03);
 }
-.left { display:flex; align-items:center; gap:10px; }
-.back-btn{background:transparent;border:none;font-size:18px;padding:6px;border-radius:10px;cursor:pointer;color:var(--muted)}
-.back-btn:hover{background:#f1f5f9}
-.avatar{width:46px;height:46px;border-radius:50%;object-fit:cover;box-shadow:0 4px 12px rgba(0,0,0,0.1)}
-.meta {display:flex;flex-direction:column}
-.meta .name{font-weight:700;color:#0f172a}
+.left { display:flex; align-items:center; gap:12px; min-width:0; }
+.back-btn{background:transparent;border:none;font-size:18px;padding:8px;border-radius:10px;cursor:pointer;color:var(--muted)}
+.back-btn:hover{background:rgba(15,23,42,0.04)}
+.avatar{width:48px;height:48px;border-radius:50%;object-fit:cover;box-shadow:var(--small-shadow)}
+.meta {display:flex;flex-direction:column; min-width:0}
+.meta .name{font-weight:700;color:#0f172a;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
 .meta .status{font-size:12px;color:var(--muted);margin-top:2px}
-.header-actions {display:flex;align-items:center;gap:6px}
+.header-actions {display:flex;align-items:center;gap:8px}
 .icon-btn{background:transparent;border:none;padding:8px;border-radius:10px;cursor:pointer;color:var(--muted);font-size:16px}
-.icon-btn:hover{background:#f1f5f9}
-.icon-btn.disabled{opacity:0.4;pointer-events:none}
+.icon-btn:hover{background:rgba(15,23,42,0.03)}
+.icon-btn.disabled{opacity:0.38;pointer-events:none}
 
-/* messages */
+/* messages area */
 .messages {
   flex:1;
-  padding:16px;
+  padding:18px 16px;
   overflow-y:auto;
   display:flex;
   flex-direction:column;
-  gap:10px;
-  background:linear-gradient(180deg,#fafafa,#fff);
-  scroll-behavior:smooth;
+  gap:12px;
+  background:
+    radial-gradient(800px 200px at 10% 10%, rgba(37,99,235,0.02), transparent 10%),
+    linear-gradient(180deg, rgba(255,255,255,0.02), transparent);
+  -webkit-overflow-scrolling: touch;
 }
+
+/* message row wrapper (keeps alignment clean) */
+.message-row{
+  display:flex;
+  width:100%;
+  align-items:flex-end;
+  gap:10px;
+  /* allow variable sizing for bubble */
+}
+.message-row.me{ justify-content:flex-end; }
+.message-row.other{ justify-content:flex-start; }
 
 /* bubble */
-.bubble {
-  max-width:75%;
-  padding:12px 16px;
-  border-radius:var(--radius);
-  font-size:15px;
-  line-height:1.4;
+.bubble{
+  max-width:78%;
+  padding:10px 14px;
+  border-radius:18px;
+  word-break:break-word;
   position:relative;
-  transition: all 0.2s ease;
-  display:flex;
-  flex-direction:column;
-  animation: popIn 0.22s ease-out;
+  font-size:15px;
+  line-height:1.35;
+  transition: all 0.18s cubic-bezier(.2,.9,.2,1);
+  box-shadow: 0 6px 18px rgba(16,24,40,0.04);
+  opacity:0;
+  transform: translateY(8px) scale(0.995);
+  animation: bubble-pop 240ms ease forwards;
 }
 
-/* sent bubble (right) */
-.bubble.me {
-  align-self:flex-end;
-  background:linear-gradient(135deg,var(--sent),var(--sent-dark));
-  color:#fff;
-  border-top-left-radius:20px;
-  border-top-right-radius:20px;
-  border-bottom-left-radius:20px;
-  border-bottom-right-radius:6px;
-  box-shadow:0 4px 12px rgba(124,58,237,0.25);
+/* sent (me) */
+.bubble.me{
+  background: linear-gradient(135deg,var(--sent-start), var(--sent-end));
+  color: #fff;
+  border-radius: 18px 18px 6px 18px;
+  box-shadow: 0 8px 20px rgba(79,70,229,0.12);
 }
 
-/* received bubble (left) */
-.bubble.other {
-  align-self:flex-start;
-  background:var(--received);
-  color:#111;
-  border-top-left-radius:20px;
-  border-top-right-radius:20px;
-  border-bottom-left-radius:6px;
-  border-bottom-right-radius:20px;
+/* received */
+.bubble.other{
+  background: var(--received);
+  color:#0b1220;
   border:1px solid var(--received-border);
-  box-shadow:0 2px 6px rgba(0,0,0,0.05);
+  border-radius: 18px 18px 18px 6px;
 }
 
-/* timestamp */
-.ts {
-  font-size:10px;
-  color:#6b7280;
+/* timestamp small pill */
+.ts{
+  font-size:11px;
+  color:rgba(11,17,34,0.55);
   position:absolute;
   bottom:-16px;
-  right:4px;
-  opacity:0.6;
+  right:10px;
+  opacity:0.9;
+  background:transparent;
 }
 
-/* input */
+/* small meta for received side (optionally show avatar) */
+.msg-meta{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  gap:6px;
+  min-width:36px;
+}
+
+/* composer */
 .composer {
   padding:12px;
   display:flex;
-  gap:8px;
+  gap:10px;
   align-items:center;
-  border-top:1px solid rgba(0,0,0,0.05);
-  background:#fff;
+  border-top:1px solid rgba(15,23,42,0.03);
+  background: linear-gradient(180deg,#ffffff,#fbfdff);
 }
+.composer .left-actions { display:flex; gap:8px; align-items:center; }
 .composer input{
-  flex:1;
-  padding:12px;
-  border-radius:24px;
-  border:1px solid rgba(0,0,0,0.1);
-  outline:none;
-  font-size:15px;
-  background:white;
-  transition:0.2s;
+  flex:1;padding:12px 14px;border-radius:20px;border:1px solid rgba(15,23,42,0.06);outline:none;font-size:15px;background:linear-gradient(180deg,#fff,#fbfdff);
+  box-shadow: inset 0 -1px 0 rgba(15,23,42,0.01);
 }
-.composer input:focus {
-  border-color:var(--accent);
-  box-shadow:0 0 4px rgba(37,99,235,0.25);
-}
-.send-btn{
-  width:44px;height:44px;
-  border-radius:12px;
-  border:none;
-  background:var(--accent);
-  color:white;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  cursor:pointer;
-  box-shadow:0 4px 12px rgba(0,0,0,0.2);
-}
-.send-btn:active{transform:scale(0.97)}
+.send-btn{width:46px;height:46px;border-radius:12px;border:none;background:var(--accent);color:white;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 8px 22px rgba(37,99,235,0.12)}
+.send-btn:active{transform:scale(0.98)}
 .send-btn.hidden{display:none}
 
-/* call dialog */
-#call-dialog{position:fixed;inset:0;background:rgba(0,0,0,0.6);display:none;align-items:center;justify-content:center;z-index:1200}
+/* call dialog (unchanged visually but slightly polished) */
+#call-dialog{position:fixed;inset:0;background:rgba(2,6,23,0.45);display:none;align-items:center;justify-content:center;z-index:1200}
 .call-card{
   width:360px;
   background:var(--card);
   border-radius:18px;
   padding:20px;
   text-align:center;
-  box-shadow:0 20px 60px rgba(0,0,0,0.3);
+  box-shadow:0 20px 60px rgba(2,6,23,0.35);
   display:flex;flex-direction:column;gap:12px
 }
 .call-peers{display:flex;gap:10px;justify-content:center;flex-wrap:wrap}
+.call-peer{display:flex;flex-direction:column;align-items:center;gap:6px}
 .call-peer video, .call-peer img{width:120px;height:120px;border-radius:12px;object-fit:cover;background:#000}
+.call-text{font-weight:700;margin-bottom:4px}
+.call-sub{color:var(--muted);font-size:13px;margin-bottom:6px}
 .call-actions{display:flex;gap:12px;justify-content:center}
-.btn-accept{background:var(--green);color:white;padding:10px 16px;border-radius:12px;border:none;cursor:pointer}
-.btn-decline{background:var(--danger);color:white;padding:10px 16px;border-radius:12px;border:none}
+.btn-accept{background:#16a34a;color:white;padding:10px 16px;border-radius:12px;border:none;cursor:pointer}
+.btn-decline{background:#ef4444;color:white;padding:10px 16px;border-radius:12px;border:none}
 .btn-cancel{background:#94a3b8;color:white;padding:10px 16px;border-radius:12px;border:none}
 
 /* animations */
-@keyframes popIn {
-  0% { transform: translateY(5px) scale(0.97); opacity:0; }
-  100% { transform: translateY(0) scale(1); opacity:1; }
+@keyframes bubble-pop{
+  from{opacity:0; transform:translateY(8px) scale(0.995)}
+  to{opacity:1; transform:translateY(0) scale(1)}
 }
 
+/* small screens */
+@media (max-width:480px){
+  .container{ width:100%; height:100vh; border-radius:0; }
+  .avatar{width:40px;height:40px}
+  .composer input{font-size:14px}
+}
 </style>
 </head>
 <body>
@@ -209,7 +219,10 @@ header{
   <div id="messages" class="messages" aria-live="polite" role="log"></div>
 
   <div class="composer" role="region" aria-label="Message composer">
-    <input id="message-input" placeholder="Type a message" aria-label="Message input">
+    <div class="left-actions">
+      <button class="icon-btn" title="Attach"><i class="fa-solid fa-plus"></i></button>
+    </div>
+    <input id="message-input" placeholder="Message..." aria-label="Message input">
     <button id="send-btn" class="send-btn hidden" title="Send"><i class="fa-solid fa-paper-plane"></i></button>
   </div>
 </div>
@@ -277,14 +290,23 @@ async function loadMessages(){
   }
 }
 function appendMessage(m){
-  const d = document.createElement('div');
-  d.className='bubble '+(m.sender===hc_profile.email?'me':'other');
-  d.textContent=m.message;
+  // create a wrapper row so alignment is handled by CSS (align-self removed)
+  const row = document.createElement('div');
+  row.className = 'message-row ' + (m.sender===hc_profile.email ? 'me' : 'other');
+
+  const bubble = document.createElement('div');
+  bubble.className = 'bubble ' + (m.sender===hc_profile.email ? 'me' : 'other');
+  bubble.textContent = m.message;
+
   const ts = document.createElement('div'); ts.className='ts';
   ts.textContent=new Date(m.created_at).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'});
-  d.appendChild(ts);
-  messagesEl.appendChild(d);
-  messagesEl.scrollTop = messagesEl.scrollHeight;
+
+  bubble.appendChild(ts);
+  row.appendChild(bubble);
+  messagesEl.appendChild(row);
+
+  // scroll to bottom smoothly
+  messagesEl.scrollTo({ top: messagesEl.scrollHeight, behavior: 'smooth' });
 }
 
 // polling
@@ -381,4 +403,4 @@ voiceBtn.addEventListener('click',()=>startCall('audio'));
 })();
 </script>
 </body>
-</html> 
+</html>
